--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "jspdf": "^2.5.2",
     "lucide-react": "^0.548.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "pdf-parse": "^2.4.5",
@@ -78,7 +78,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
